Cleaned up some stuff